removed border around container, kept right and left border for carosel, added some margin, arrows no longer remain visible after leaving the div occassionally

--- a/client/src/css/autoScroller.css
+++ b/client/src/css/autoScroller.css
@@ -9,7 +9,9 @@
 }
 
 .auto-scroller-container {
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  /* border: 1px solid rgba(0, 0, 0, 0.3); */
+  margin-top: 10px;
+  margin-bottom: 10px;
   text-align: center;
   height: 200px;
   width: 100%;
